--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
       "**/*.(t|j)s"
     ],
     "coverageDirectory": "../coverage",
-    "testEnvironment": "node"
+    "testEnvironment": "node",
+    "modulePathIgnorePatterns": ["dist"]
   }
 }
