--- a/package.json
+++ b/package.json
@@ -34,12 +34,14 @@
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/swagger": "^6.3.0",
     "@nestjs/throttler": "^4.0.0",
+    "@types/morgan": "^1.9.4",
     "bcrypt": "^5.1.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "cookie-parser": "^1.4.6",
     "date-fns": "^2.29.3",
     "mongoose": "^7.0.3",
+    "morgan": "^1.10.0",
     "nodemailer": "^6.9.1",
     "passport": "^0.6.0",
     "passport-http": "^0.3.0",
