--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config test/e2e/jest-e2e.json"
   },
   "dependencies": {
     "@nestjs-modules/mailer": "^1.8.1",
@@ -71,6 +71,7 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "jest": "29.5.0",
+    "jest-serial-runner": "^1.2.1",
     "mongodb-memory-server": "^8.12.2",
     "prettier": "^2.3.2",
     "source-map-support": "^0.5.20",
@@ -99,6 +100,7 @@
     "testEnvironment": "node",
     "modulePathIgnorePatterns": [
       "dist"
-    ]
+    ],
+    "runner": "jest-serial-runner"
   }
 }
