--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
     "start:dev": "nest start --watch",
+    "migration:generate": "node ./libs/db/typeorm-sql/config/add-migration.script.js",
+    "migration:run": "yarn typeorm-ts-node-esm migration:run -d libs/db/typeorm-sql/config/ormconfig.ts",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/src/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
@@ -83,7 +85,8 @@
     "ts-loader": "^9.2.3",
     "ts-node": "^10.0.0",
     "tsconfig-paths": "4.2.0",
-    "typescript": "^4.7.4"
+    "typescript": "^4.7.4",
+    "yargs": "^17.7.2"
   },
   "jest": {
     "moduleFileExtensions": [
